<resources>
    <string name="app_name">Android_Project</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="circles">circles</string>
    <string name="human">human</string>
    <string name="email">email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
</resources>